60-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: yatest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: myredisserver1 #datornamn - vi kan sen från kod kolla till myredisserver1:3306
  namespace: yatest
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
